--- a/site/index.html
+++ b/site/index.html
@@ -1,35 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>GBA Game</title>
-  <style>
-    body {
-      margin: 0;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #display { width: 640px; height: 480px; max-width: 100%; }
-    #game { width: 100%; height: 100%; }
-  </style>
+    <meta charset="utf-8" />
+    <title>GBA Game</title>
+    <link rel="stylesheet" href="./style.css">
+    <script defer src="./startEmu.js"></script>
+    <script defer src="https://cdn.emulatorjs.org/latest/data/loader.js"></script>
 </head>
 <body>
-  <div id="display"><div id="game"></div></div>
-
-  <script>
-    window.EJS_player = "#game";
-    window.EJS_core = "gba";
-    window.EJS_gameUrl = "./rom/game.gba";
-    window.EJS_gameName = "game";
-    window.EJS_pathtodata = "https://cdn.emulatorjs.org/latest/data/";
-    window.EJS_startOnLoaded = true;
-    window.EJS_disableDatabases = true;
-    window.EJS_DEBUG_XX = true;
-  </script>
-
-  <script src="https://cdn.emulatorjs.org/latest/data/loader.js"></script>
+  <div id="display">
+    <div id="game"></div>
+  </div>
 </body>
 </html>
