Moved site to root and linked to make

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>GBA Game</title>
     <link rel="stylesheet" href="./style.css">
     <script defer src="./startEmu.js"></script>
-    <script defer src="https://cdn.emulatorjs.org/latest/data/loader.js"></script>
+    <!-- <script defer src="https://cdn.emulatorjs.org/latest/data/loader.js"></script> -->
 </head>
 <body>
   <div id="display">
