--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GBA Game</title>
     <link rel="stylesheet" href="./style.css">
     <script defer src="./startEmu.js"></script>
-    <!-- <script defer src="https://cdn.emulatorjs.org/latest/data/loader.js"></script> -->
 </head>
 <body>
+  <button id="start">Tap to start</button>
   <div id="display">
     <div id="game"></div>
   </div>
